@@ -1,5 +1,6 @@
 4.5 -> 5.0:
-    - jbj: move (largely unused) fileTypes into rpmfi.h
+    - rpm.org: rename fileTypes_e and whatis() (for name spacing).
+    - jbj: move (largely unused) fileTypes into rpmfi.h.
     - jbj: remove whatis() from rpmlib, use S_ISFOO() instead.
     - jbj: ensure that PLD setup & FHS packages install correctly.
     - jbj: wrapper for open(2).
